--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                 Quality has a name - Vsys Host, the top-notch hosting provider
               </h1>
 
-              <div class="hero__box">
+              <div class="hero__thumb">
                 <div class="hero__info">
                   <p class="hero__description">
                     VSYS Host operates in Kyiv, Seattle, and Amsterdam's
@@ -459,8 +459,8 @@
                     <br /><br />
                     Ticket response time:
                     <span class="text--blue">15 minutes</span><br />
-                    Uptime of our servers: <span class="text--blue">99.9% </span
-                    ><br />Payments:
+                    Uptime of our servers:
+                    <span class="text--blue">99.9% </span><br />Payments:
                   </p>
 
                   <div class="hero__buttons">
@@ -745,14 +745,16 @@
                     505, Kyiv 04050, Ukraine</a
                   >
                 </li>
-                <li>
-                  <a class="footer-contacts__phone" href="#"
-                    >+38 (044) 591-56-79</a
-                  >
-                </li>
-                <li>
-                  <a class="footer-contacts__mail" href="#">info@v-sys.org</a>
-                </li>
+                <div>
+                  <li>
+                    <a class="footer-contacts__phone" href="#"
+                      >+38 (044) 591-56-79</a
+                    >
+                  </li>
+                  <li>
+                    <a class="footer-contacts__mail" href="#">info@v-sys.org</a>
+                  </li>
+                </div>
               </ul>
             </address>
           </div>
@@ -820,7 +822,7 @@
                   alt=""
               /></a>
             </li>
-            <li>
+            <li class="footer__payment-item">
               <a class="footer__payment-link" href="#"
                 ><img
                   class="footer__payment-img"
@@ -828,7 +830,7 @@
                   alt=""
               /></a>
             </li>
-            <li>
+            <li class="footer__payment-item">
               <a class="footer__payment-link" href="#"
                 ><img
                   class="footer__payment-img"
@@ -836,7 +838,7 @@
                   alt=""
               /></a>
             </li>
-            <li>
+            <li class="footer__payment-item">
               <a class="footer__payment-link" href="#"
                 ><img
                   class="footer__payment-img"
@@ -844,7 +846,7 @@
                   alt=""
               /></a>
             </li>
-            <li>
+            <li class="footer__payment-item">
               <a class="footer__payment-link" href="#"
                 ><img
                   class="footer__payment-img"
@@ -852,7 +854,7 @@
                   alt=""
               /></a>
             </li>
-            <li>
+            <li class="footer__payment-item">
               <a class="footer__payment-link" href="#"
                 ><img
                   class="footer__payment-img"
