--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
       <div class="container">
         <div class="topbar">
-          <div class="topbar__quality">
-            <svg class="quality-badge" width="40" height="40">
+          <div class="topbar-quality">
+            <svg class="topbar-quality__icon" width="40" height="40">
               <use
-                class="quality-badge__svg"
+                class="topbar-quality__svg"
                 href="./images/sprite.svg#quality-badge"
               ></use>
             </svg>
-            <a class="topbar__quality-link" href="#">
+            <a class="topbar-quality__link" href="#">
               TRUSTED HOSTING PROVIDER SINCE 2009
             </a>
             <svg width="40" height="40">
@@ -62,7 +62,7 @@
             </svg>
           </div>
 
-          <ul class="topbar__list">
+          <ul class="topbar-buttons">
             <li class="navbar__item">
               <a
                 class="dropdown__button topbar__button topbar__button--white"
@@ -434,7 +434,7 @@
     <!-- Hero -->
 
     <main>
-      <section class="hero o-hidden">
+      <section class="hero">
         <div class="hero__background-img"></div>
 
         <!-- <button id="left">left</button>
@@ -463,7 +463,7 @@
                     <span class="text--blue">99.9% </span><br />Payments:
                   </p>
 
-                  <div class="hero__buttons">
+                  <div class="hero__button">
                     <a class="hero__button hero__button--blue" href=""
                       >CHECK PRICING FOR USA DEDICATED SERVER</a
                     >
@@ -535,7 +535,7 @@
 
       <section class="prices">
         <div class="container">
-          <div class="prices-container">
+          <div class="prices__container">
             <ul class="prices-menu">
               <li class="prices-menu__item">
                 <div class="prices-menu__img">
@@ -605,7 +605,7 @@
       <!-- Faq  -->
 
       <section class="faq">
-        <div class="faq-background"></div>
+        <div class="faq__background"></div>
         <div class="section container">
           <h2 class="section-title">faq</h2>
 
@@ -796,8 +796,8 @@
           </div>
         </div>
 
-        <div class="xxx">
-          <ul class="footer__socials">
+        <div class="footer-info">
+          <ul class="footer-social__list">
             <li>
               <a href="#"><img src="./images/github-icon.svg" alt="" /></a>
             </li>
@@ -812,52 +812,52 @@
             </li>
           </ul>
 
-          <ul class="footer__payment">
+          <ul class="footer-payment">
             <h3 class="footer__subtitle">Payment system</h3>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-bitcoin-icon.svg"
                   alt=""
               /></a>
             </li>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-paypal-icon.svg"
                   alt=""
               /></a>
             </li>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-bank-transfer-icon.svg"
                   alt=""
               /></a>
             </li>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-webmoney-icon.svg"
                   alt=""
               /></a>
             </li>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-visa-icon.svg"
                   alt=""
               /></a>
             </li>
-            <li class="footer__payment-item">
-              <a class="footer__payment-link" href="#"
+            <li class="footer-payment__item">
+              <a class="footer-payment__link" href="#"
                 ><img
-                  class="footer__payment-img"
+                  class="footer-payment__img"
                   src="./images/./payment-mastercard-icon.svg"
                   alt=""
               /></a>
