--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@
       <div class="container">
         <div class="topbar">
           <div class="topbar-quality">
-            <svg class="topbar-quality__icon" width="40" height="40">
-              <use
-                class="topbar-quality__svg"
-                href="./images/sprite.svg#quality-badge"
-              ></use>
-            </svg>
             <a class="topbar-quality__link" href="#">
+              <svg class="topbar-quality__icon" width="40" height="40">
+                <use
+                  class="topbar-quality__svg"
+                  href="./images/sprite.svg#quality-badge"
+                ></use>
+              </svg>
               TRUSTED HOSTING PROVIDER SINCE 2009
+              <svg width="40" height="40">
+                <use
+                  class="big-arrow"
+                  href="./images/sprite.svg#big-arrow"
+                ></use>
+              </svg>
             </a>
-            <svg width="40" height="40">
-              <use class="big-arrow" href="./images/sprite.svg#big-arrow"></use>
-            </svg>
           </div>
 
           <ul class="topbar-buttons">
@@ -437,98 +440,150 @@
       <section class="hero">
         <div class="hero__background-img"></div>
 
-        <!-- <button id="left">left</button>
-        <button id="right">right</button> -->
+        <div class="slider__controls">
+          <button id="left">left</button> <button id="right">right</button>
+        </div>
 
-        <ul class="slider-content">
-          <li class="fs-0">
-            <div class="container section hero__content">
-              <h1 class="hero__title">
-                Quality has a name - Vsys Host, the top-notch hosting provider
-              </h1>
+        <div class="container section">
+          <div class="slider__viewbox">
+            <ul class="slider-content">
+              <li class="fs-0 slider__container">
+                <div class="hero__content">
+                  <h1 class="hero__title">
+                    Quality has a name - Vsys Host, the top-notch hosting
+                    provider
+                  </h1>
 
-              <div class="hero__thumb">
-                <div class="hero__info">
-                  <p class="hero__description">
-                    VSYS Host operates in Kyiv, Seattle, and Amsterdam's
-                    top-tier data centers. 99.9% uptime guaranteed, DDoS
-                    protection, low latency, and packet loss. Shared hosting,
-                    VPS, dedicated server, cloud solution, GPU, or streaming
-                    server, significant data storage, 10Gbps, or bare metal
-                    beast - crypto payments are welcome.
-                    <br /><br />
-                    Ticket response time:
-                    <span class="text--blue">15 minutes</span><br />
-                    Uptime of our servers:
-                    <span class="text--blue">99.9% </span><br />Payments:
-                  </p>
+                  <div class="hero__thumb">
+                    <div class="hero__info">
+                      <p class="hero__description">
+                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                        top-tier data centers. 99.9% uptime guaranteed, DDoS
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beast - crypto payments are welcome.
+                        <br /><br />
+                        Ticket response time:
+                        <span class="text--blue">15 minutes</span><br />
+                        Uptime of our servers:
+                        <span class="text--blue">99.9% </span><br />Payments:
+                      </p>
 
-                  <div class="hero__button">
-                    <a class="hero__button hero__button--blue" href=""
-                      >CHECK PRICING FOR USA DEDICATED SERVER</a
-                    >
-                    <button class="hero__button hero__button--blue">
-                      CONTACT SALES TEAM
-                    </button>
+                      <div class="hero__buttons">
+                        <a class="hero__button hero__button--blue" href=""
+                          >CHECK PRICING FOR USA DEDICATED SERVER</a
+                        >
+                        <button class="hero__button hero__button--blue">
+                          CONTACT SALES TEAM
+                        </button>
+                      </div>
+                    </div>
+
+                    <div class="hero__image">
+                      <img
+                        width="222px"
+                        class="hero__svg"
+                        src="./images/balancing-blue.svg"
+                        alt="Server illustration"
+                      />
+                    </div>
                   </div>
                 </div>
+              </li>
 
-                <div class="hero__image">
-                  <img
-                    width="222px"
-                    class="hero__svg"
-                    src="./images/balancing-blue.svg"
-                    alt="Server illustration"
-                  />
-                </div>
-              </div>
-            </div>
-          </li>
+              <li class="fs-0 slider__container">
+                <div class="hero__content">
+                  <h1 class="hero__title">
+                    Quality has a name - Vsys Host, the top-notch hosting
+                    provider
+                  </h1>
 
-          <!-- <li class="fs-0">
-            <div class="container section hero__content">
-              <h1 class="hero__title">
-                Quality has a name - Vsys Host, the top-notch hosting provider
-              </h1>
+                  <div class="hero__thumb">
+                    <div class="hero__info">
+                      <p class="hero__description">
+                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                        top-tier data centers. 99.9% uptime guaranteed, DDoS
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beast - crypto payments are welcome.
+                        <br /><br />
+                        Ticket response time:
+                        <span class="text--blue">15 minutes</span><br />
+                        Uptime of our servers:
+                        <span class="text--blue">99.9% </span><br />Payments:
+                      </p>
 
-              <div class="hero__box">
-                <div class="hero__info">
-                  <p class="hero__description">
-                    VSYS Host operates in Kyiv, Seattle, and Amsterdam's
-                    top-tier data centers. 99.9% uptime guaranteed, DDoS
-                    protection, low latency, and packet loss. Shared hosting,
-                    VPS, dedicated server, cloud solution, GPU, or streaming
-                    server, significant data storage, 10Gbps, or bare metal
-                    beast - crypto payments are welcome.
-                    <br /><br />
-                    Ticket response time:
-                    <span class="text--blue">15 minutes</span><br />
-                    Uptime of our servers: <span class="text--blue">99.9% </span
-                    ><br />Payments:
-                  </p>
+                      <div class="hero__buttons">
+                        <a class="hero__button hero__button--blue" href=""
+                          >CHECK PRICING FOR USA DEDICATED SERVER</a
+                        >
+                        <button class="hero__button hero__button--blue">
+                          CONTACT SALES TEAM
+                        </button>
+                      </div>
+                    </div>
 
-                  <div class="hero__buttons">
-                    <a class="hero__button hero__button--blue" href=""
-                      >CHECK PRICING FOR USA DEDICATED SERVER</a
-                    >
-                    <button class="hero__button hero__button--blue">
-                      CONTACT SALES TEAM
-                    </button>
+                    <div class="hero__image">
+                      <img
+                        width="222px"
+                        class="hero__svg"
+                        src="./images/balancing-blue.svg"
+                        alt="Server illustration"
+                      />
+                    </div>
                   </div>
                 </div>
+              </li>
 
-                <div class="hero__image">
-                  <img
-                    width="222px"
-                    class="hero__svg"
-                    src="./images/balancing-blue.svg"
-                    alt="Server illustration"
-                  />
+              <li class="fs-0 slider__container">
+                <div class="hero__content">
+                  <h1 class="hero__title">
+                    Quality has a name - Vsys Host, the top-notch hosting
+                    provider
+                  </h1>
+
+                  <div class="hero__thumb">
+                    <div class="hero__info">
+                      <p class="hero__description">
+                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                        top-tier data centers. 99.9% uptime guaranteed, DDoS
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beast - crypto payments are welcome.
+                        <br /><br />
+                        Ticket response time:
+                        <span class="text--blue">15 minutes</span><br />
+                        Uptime of our servers:
+                        <span class="text--blue">99.9% </span><br />Payments:
+                      </p>
+
+                      <div class="hero__buttons">
+                        <a class="hero__button hero__button--blue" href=""
+                          >CHECK PRICING FOR USA DEDICATED SERVER</a
+                        >
+                        <button class="hero__button hero__button--blue">
+                          CONTACT SALES TEAM
+                        </button>
+                      </div>
+                    </div>
+
+                    <div class="hero__image">
+                      <img
+                        width="222px"
+                        class="hero__svg"
+                        src="./images/balancing-blue.svg"
+                        alt="Server illustration"
+                      />
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </li> -->
-        </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
 
       <!-- Prices  -->
