--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
           </button>
 
           <div class="mobile-menu" id="mobile-menu" data-menu>
-            <ul class="navbar__list">
+            <ul class="navbar__list mobile-menu__container">
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Servers<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -201,7 +201,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >VPS<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -241,11 +241,11 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#">HOSTING</a>
+                <a class="dropdown__button" href="#">Hosting</a>
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Cloud<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -285,7 +285,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Services<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -325,7 +325,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Solutions<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -365,7 +365,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Company<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -405,7 +405,7 @@
               </li>
 
               <li class="navbar__item">
-                <a class="dropdown__list dropdown__button" href="#"
+                <a class="dropdown__button" href="#"
                   >Recources<span class="menu-arrow"></span
                 ></a>
                 <ul class="navbar-dropdown">
@@ -465,7 +465,8 @@
               <li class="slider__container">
                 <div class="hero__content">
                   <h1 class="hero__title">
-                    Quality has a name - Vsys Host, <br />
+                    Quality has a name - Vsys Host,
+                    <span class="hero__title--nowrap"><br /></span>
                     the top-notch hosting provider
                   </h1>
 
@@ -480,9 +481,10 @@
                         bare metal beast - crypto payments are welcome.
                         <br /><br />
                         Ticket response time:
-                        <span class="text--blue">15 minutes</span><br />
+                        <span class="text--lightblue">15 minutes</span><br />
                         Uptime of our servers:
-                        <span class="text--blue">99.9% </span><br />Payments:
+                        <span class="text--lightblue">99.9% </span
+                        ><br />Payments:
                       </p>
 
                       <div class="hero__buttons">
@@ -525,9 +527,10 @@
                         bare metal beast - crypto payments are welcome.
                         <br /><br />
                         Ticket response time:
-                        <span class="text--blue">15 minutes</span><br />
+                        <span class="text--lightblue">15 minutes</span><br />
                         Uptime of our servers:
-                        <span class="text--blue">99.9% </span><br />Payments:
+                        <span class="text--lightblue">99.9% </span
+                        ><br />Payments:
                       </p>
 
                       <div class="hero__buttons">
@@ -570,9 +573,10 @@
                         bare metal beast - crypto payments are welcome.
                         <br /><br />
                         Ticket response time:
-                        <span class="text--blue">15 minutes</span><br />
+                        <span class="text--lightblue">15 minutes</span><br />
                         Uptime of our servers:
-                        <span class="text--blue">99.9% </span><br />Payments:
+                        <span class="text--lightblue">99.9% </span
+                        ><br />Payments:
                       </p>
 
                       <div class="hero__buttons">
@@ -887,7 +891,9 @@
           </ul>
 
           <ul class="footer-payment">
-            <h3 class="footer__subtitle">Payment system</h3>
+            <h3 class="footer__subtitle footer-payment__subtitle">
+              Payment system
+            </h3>
             <li class="footer-payment__item">
               <a class="footer-payment__link" href="#"
                 ><img
